Acutalización de experiencia y estudios

--- a/sections/education.tex
+++ b/sections/education.tex
@@ -11,8 +11,7 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Bachillerato: En proceso
-		        \item Egresado: Julio - 2019
+		        \item Grado: Bachiller
 		        \item Promedio: 16.96 / 20
 		        \item Actividades y asociaciones: Taller de música, Grupo de investigación
 		    \end{itemize}
@@ -24,11 +23,6 @@
 		{
 		  %  Especialidad en programación, para ello se requirió el aprendizaje de lógica de programación, algunos lenguajes de programación(C++, Java, .Net) y tecnologías informáticas.\\
 		    %
-		    \vspace{-5mm}
-		    \begin{itemize}
-		        \setlength\itemsep{0pt}
-		        \item Egresado: Diciembre - 2011
-		    \end{itemize}
         }
 \end{entrylist}
 
@@ -42,10 +36,10 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Calificación: No provee (Completadas 6 tareas de 5 requeridas)
-		        \item Instructor: Aakash N S
+		      %  \item Calificación: No provee (Completadas 6 tareas de 5 requeridas)
+		      %  \item Instructor: Aakash N S
 		        \item Certificado: {\href{https://jovian.ml/certificate/MFQWCNBYGQ}{https://jovian.ml/certificate/MFQWCNBYGQ}}
-		        \item ID: MFQWCNBYGQ
+		      %  \item ID: MFQWCNBYGQ
 		    \end{itemize}
 		}
     \entry
@@ -56,8 +50,8 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Calificación: 100.00\%
-		        \item Instructor: Karim Pichara Baksai
+		      %  \item Calificación: 100.00\%
+		      %  \item Instructor: Karim Pichara Baksai
 		        \item Certificado: Sin comprar
 		    \end{itemize}
 		}
@@ -69,10 +63,10 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Calificación: 96.00\%
-		        \item Instructor: Daniel Egger y Paul Bendich
+		      %  \item Calificación: 96.00\%
+		      %  \item Instructor: Daniel Egger y Paul Bendich
 		        \item Certificado: {\href{https://coursera.org/verify/XP73L8MVSYLE}{coursera.org/verify/XP73L8MVSYLE}}
-		        \item ID: XP73L8MVSYLE
+		      %  \item ID: XP73L8MVSYLE
 		    \end{itemize}
 		}
     \entry
@@ -83,10 +77,10 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Calificación: 100.00\%
-		        \item Instructor: Andrew Ng
+		      %  \item Calificación: 100.00\%
+		      %  \item Instructor: Andrew Ng
 		        \item Certificado: {\href{https://coursera.org/verify/W5Y25Q7GVVKB}{coursera.org/verify/W5Y25Q7GVVKB}}
-		        \item ID: W5Y25Q7GVVKB
+		      %  \item ID: W5Y25Q7GVVKB
 		    \end{itemize}
 		}
 	\entry
@@ -97,8 +91,8 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Calificación: 95.30\%
-		        \item Instructor: Andrew Ng
+		      %  \item Calificación: 95.30\%
+		      %  \item Instructor: Andrew Ng
 		        \item Certificado: Sin comprar
 		    \end{itemize}
 		}
@@ -110,8 +104,8 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-		        \item Calificación: No provee (Progreso 100\%)
-		        \item Instructor: Juanjo García y Moisés Navarro
+		      %  \item Calificación: No provee (Progreso 100\%)
+		      %  \item Instructor: Juanjo García y Moisés Navarro
 		        \item Certificado: {\href{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}}
 		        \item ID: U7B G5R DZP
 		    \end{itemize}
