--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -30,6 +30,18 @@
 %     	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
 %         }
 	\entry
+	    {8/2020 -- 8/2020}
+		{Freelance Developer}
+		{Evolution Soluciones Digitales}
+		{
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
+    	        \item Desarrollo de módulo de catálogos virtuales
+    	    \end{itemize}
+		    \texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}
+        }
+	\entry
 		{7/2020 -- 7/2020}
 		{Freelance Developer}
 		{Evolution Soluciones Digitales}
@@ -49,13 +61,8 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \item Gestión de proyecto
-    	        \item Levantamiento y análisis de requisitos
-    	        \item Diseño e implementación de todo el sistema (arquitectura, base de datos, backend, frontend, API REST)
-    	        \item Configuración de servidor Gnu/Linux en AWS Lightsail
-    	        \item Configuración para CI/CD
-    	        \item Configuración de sistema de backups automático en Cloud
-    	        \item Mantenimiento del sistema
+    	        \item Gestión, diseño e implementación de todo el sistema (arquitectura, base de datos, backend, frontend, API REST)
+    	        \item Configuración de servidor Gnu/Linux en AWS Lightsail, Pipeline CI/CD y backup automático en Cloud
     	    \end{itemize}
 		    \texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{GitLab CI/CD}\slashsep\texttt{AWS Lightsail}\slashsep\texttt{Nginx}\slashsep\texttt{Debian}
         }
@@ -82,7 +89,7 @@
     	        \setlength\itemsep{0pt}
     	        \item Desarrollo y corrección de funcionalidades de módulos (backend y frontend)
     	        \item Programación de vistas, triggers y funciones (PlPgSql)
-    	        \item Despliegue de funcionalidades a sistema en producción (código y base de datos)
+    	        \item Despliegue a sistema en producción (código y base de datos)
     	    \end{itemize}
 		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{Svn}\slashsep\texttt{Docker}
         }
@@ -94,15 +101,10 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \item Desarrollo de micro aplicaciones y módulos (backend y frontend)
-    	        \item Despliegue de funcionalidades a sistemas en producción (código y bases de datos)
-    	        \item Optimización de código y mejora de rendimiento de funcionalidades
-    	        \item Programación de vistas, triggers y funciones (PlPgSql)
-    	        \item Migración de sistemas a nuevas versiones (código y bases de datos)
-    	        \item Configuración de servidor Gnu/Linux
-    	        \item Mantenimiento a sistemas en producción
+    	        \item Migración de sistemas a nuevas versiones (código, bases de datos y configuración de servidores GNU/Linux)
+    	        \item Optimización y despliegue de funcionalidades a sistemas en producción
     	    \end{itemize}
-		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{PostGis}\slashsep\texttt{GMaps}\slashsep\texttt{Ubuntu Server}\slashsep\texttt{Apache}
+		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{PostGis}\slashsep\texttt{Ubuntu Server}\slashsep\texttt{Apache}
         }
 	\entry
 		{12/2016 -- 12/2017\\\footnotesize{part time}}
@@ -114,11 +116,7 @@
     	        \setlength\itemsep{0pt}
     	        \item Desarrollo de nuevos módulos y sistemas informáticos en diferentes tecnologías
     	        \item Programación de vídeo juegos y simuladores con realidad virtual y aumentada
-    	        \item Programación para móviles
-    	        \item Agregar funcionalidades a sistema en producción
-    	        \item Despliegue de sistema en servidor Gnu/Linux
-    	        \item Levantamiento de requisitos
-    	    \end{itemize}\texttt{Unity}\slashsep\texttt{C\#}\slashsep\texttt{Python}\slashsep\texttt{PHP}\slashsep\texttt{JavaScript}\slashsep\texttt{MySql}\slashsep\texttt{PostgreSql}\slashsep\texttt{VR}\slashsep\texttt{AR}
+    	    \end{itemize}\texttt{Unity}\slashsep\texttt{C\#}\slashsep\texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{PHP}\slashsep\texttt{JavaScript}\slashsep\texttt{MySql}\slashsep\texttt{PostgreSql}\slashsep\texttt{VR}\slashsep\texttt{AR}
         }
 	\entry
 		{2/2015 -- 11/2016\\\footnotesize{part time}}
@@ -129,7 +127,6 @@
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
     	        \item Implementación de nuevos módulos (backend y frontend)
-    	        \item Agregar funcionalidades a módulos existentes
     	        \item Programación de vistas, triggers y funciones (PlPgSql)
     	    \end{itemize}
 		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{PostgreSql}\slashsep\texttt{Ubuntu Server}
@@ -154,9 +151,7 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \item Levantamiento de requisitos
-    	        \item Análisis, diseño e implentación de la base de datos
-    	        \item Programación de sistema de escritorio(Java SE, Java Swing)
+    	        \item Programación de sistema de escritorio para el control de clientes
     	    \end{itemize}
 		    \texttt{Java}\slashsep\texttt{MySql}
         }
@@ -181,10 +176,8 @@
     	    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \item Ensamblaje de computadoras
-    	        \item Mantenimiento de equipos
-    	        \item Implementación de redes
-    	        \item Instalación de sistemas operativos y aplicaciones
+    	        \item Ensamblaje y mantenimiento de computadoras
+    	        \item Configuración de redes
     	    \end{itemize}
         }
 \end{entrylist}
