--- a/sections/skills_techs.tex
+++ b/sections/skills_techs.tex
@@ -1,95 +1,82 @@
 \cvsect{Conocimientos, Herramientas y Tecnologías}
 
 \vspace{-0.5cm}
-\begin{multicols}{3}
-\begin{itemize}
-    \renewcommand\labelitemi{\checkmark}
-    \setlength\itemsep{0pt}
-    \item Desarrollo web
-    \item Desarrollo back-end
-    \item Machine Learning
-    \item Data Science
-    \item Cloud Services
-    \item Gestión GNU/Linux
-\end{itemize}
-\end{multicols}
+% \begin{multicols}{3}
+% \begin{itemize}
+%     \renewcommand\labelitemi{\checkmark}
+%     \setlength\itemsep{0pt}
+%     \item Desarrollo web
+%     \item Desarrollo back-end
+%     \item Machine Learning
+%     \item Data Science
+%     \item Cloud Services
+%     \item Gestión GNU/Linux
+% \end{itemize}
+% \end{multicols}
     
-\begin{multicols}{3}
+% \begin{multicols}{3}
 \begin{itemize}
 \setlength\itemsep{0pt}
 \item
     \textbf{Lenguajes/Frameworks/Bibliotecas:}
-    \begin{itemize}
-        \item Python
-            \begin{itemize}
+    \begin{itemize*}
+        \item \textbf{Python}
+            \begin{itemize*}
                 \item Django
                 \item DjangoRestFramework
-                \item DjangoFilter
                 \item PyTorch
                 \item Numpy
-                \item Spacy
                 \item VirtualEnv
-                \item PipEnv
                 \item PIP
-            \end{itemize}
-        \item Javascript
-            \begin{itemize}
+            \end{itemize*}
+        \item \textbf{Javascript}
+            \begin{itemize*}
                 \item ExtJs
                 \item Vue
                 \item Angular
                 \item Svelte
                 \item NPM
-                \item ParcelJs
-            \end{itemize}
-        \item Java
-            \begin{itemize}
+            \end{itemize*}
+        \item \textbf{Java}
+            \begin{itemize*}
                 \item SpringFramework
-                    \begin{itemize}
-                        \item boot
-                        \item mvc
-                        \item orm
-                        \item security
-                    \end{itemize}
                 \item Hibernate
                 \item Thymeleaf
                 \item Gradle
                 \item Maven
-            \end{itemize}
-        \item PHP
-            \begin{itemize}
+            \end{itemize*}
+        \item \textbf{PHP}
+            \begin{itemize*}
                 \item Laravel
-            \end{itemize}
-        \item C\#
-            \begin{itemize}
+            \end{itemize*}
+        \item \textbf{C\#}
+            \begin{itemize*}
                 \item Unity
-            \end{itemize}
-        \item C++
-            \begin{itemize}
-                \item Cmake
-            \end{itemize}
-        \item Bash
-        \item Octave
-        \item TypeScript
-        \item Dart
-            \begin{itemize}
+            \end{itemize*}
+        \item \textbf{C++}
+        \item \textbf{Bash}
+        \item \textbf{Octave}
+        \item \textbf{TypeScript}
+        \item \textbf{Dart}
+            \begin{itemize*}
                 \item Flutter
-            \end{itemize}
-        \item Autolisp
-    \end{itemize}
+            \end{itemize*}
+        \item \textbf{Autolisp}
+    \end{itemize*}
 \item
     \textbf{Bases de datos:}
-    \begin{itemize}
+    \begin{itemize*}
         \item Postgresql
         \item MySql
-        \item Microsoft SQL Server
+        \item Ms SQL Server
         \item MariaDB
         \item MongoDB
         \item Cassandra
         \item SQLite
-    \end{itemize}
+    \end{itemize*}
 \item
     \textbf{Tecnologías web:}
-    \begin{itemize}
+    \begin{itemize*}
         \item HTML, XHTML
         \item CSS
         \item XML
@@ -102,35 +89,34 @@
         \item Apache
         \item Tomcat
         \item Gunicorn
-    \end{itemize}
+    \end{itemize*}
 \item
     \textbf{Sistemas operativos:}
-    \begin{itemize}
+    \begin{itemize*}
         \item Archlinux
         \item Debian
         \item Ubuntu Server
         \item Backtrack
-        \item Vector (Slackware)
         \item Windows Server
-    \end{itemize}
+    \end{itemize*}
 \item
     \textbf{Otras Herramientas:}
-    \begin{itemize}
-        \item VCS
-            \begin{itemize}
+    \begin{itemize*}
+        \item \textbf{VCS}
+            \begin{itemize*}
                 \item Git
                 \item SVN
-            \end{itemize}
-        \item Docker
-        \item GitLab CI/CD
-        \item AWS lightsail
-        \item GNU/Linux
-        \begin{itemize}
+            \end{itemize*}
+        \item \textbf{Docker}
+        \item \textbf{GitLab CI/CD}
+        \item \textbf{AWS lightsail}
+        \item \textbf{GNU/Linux}
+        \begin{itemize*}
             \item Cron
             \item Supervisor
             \item Tmux
             \item Zsh
-        \end{itemize}
-    \end{itemize}
+        \end{itemize*}
+    \end{itemize*}
 \end{itemize}
-\end{multicols}
+% \end{multicols}
